# PitIQ

./: .dockerignore  .gitignore  APPROACH.md  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/src/pitiq/api/: main.py  schemas.py
backend/src/pitiq/data/: __main__.py  clean.py  client.py  generate_circuit_maps.py  ingest.py
backend/src/pitiq/envs/: grid.py  grid_constants.py  sandbox.py  test_grid_part1.py  test_grid_part2.py  test_grid_part3.py  test_grid_part4.py  test_grid_part5.py  test_sandbox_manual.py
backend/src/pitiq/features/: build.py  split.py
backend/src/pitiq/ml/: compound_constants.py  evaluate.py  predict.py  rival_policy.py  train_ppo_grid.py  train_ppo_sandbox.py  train_xgboost.py
backend/src/pitiq/styles/: build.py
backend/tests/: test_clean.py  test_client.py  test_features.py  test_ingest.py  test_split.py
deploy/: setup_ec2.sh  upload_data.sh
docs/: DECISIONS.md  PHASE_NOTES.md  RESULTS.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: CircuitMap.tsx  ConfidenceBadge.tsx  DriverBadge.tsx  DriverStylePanel.tsx  LapTimeline.tsx  LoadingState.tsx  PageShell.tsx  RaceReplay.tsx  StatCard.tsx  TireBadge.tsx
frontend/src/pages/: Historical.tsx  Landing.tsx  Optimizer.tsx  Results.tsx  Sandbox.tsx
frontend/src/store/: index.ts
frontend/src/styles/: tokens.css
notebooks/: 01_eda.ipynb  02_driver_styles.ipynb  03_sandbox_env.ipynb
