[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pitiq"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastf1>=3.3",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "xgboost>=2.0",
    "scikit-learn>=1.4",
    "stable-baselines3>=2.3",
    "gymnasium>=0.29",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "jupyter>=1.0",
    "ipykernel>=6.29",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
